# hspass

./: LICENSE  README.md  gentags.sh  hspass.cabal  stack.yaml
app/: Main.hs
src/: EncryptedVault.hs  Entry.hs  Lib.hs  TAGS  Vault.hs
