name:                hspass
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/dxtr/hspass#readme
license:             BSD3
license-file:        LICENSE
author:              Kim Lidstrom
maintainer:          kim@dxtr.im
copyright:           (c) 2016 Kim Lidstrom
category:            Security
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib Vault Entry
  build-depends:       base >= 4.7 && < 5
                     , time
                     , containers
                     , binary
                     , bytestring
                     , vector
                     , CBOR
                     , saltine
  default-language:    Haskell2010

executable hspass-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , time
                     , CBOR
                     , saltine
                     , hspass
  default-language:    Haskell2010

test-suite hspass-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspass
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dxtr/hspass
